--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>HomeQuest</title>
     <meta
       name="description"
-      content="Explore EstateHub, a unique platform exclusively for individual property sales. Similar to popular marketplaces, we focus solely on enabling direct sales of homes and land. Join our community-driven platform for personalized real estate transactions."
+      content="Explore HomeQuest, a unique platform exclusively for individual property sales. Similar to popular marketplaces, we focus solely on enabling direct sales of homes and land. Join our community-driven platform for personalized real estate transactions."
     />
   </head>
   <body>
